--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,14 +6,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: reddit-clone-app
+      app: reddit-clone-app:1.0.0-8
   template:
     metadata:
       labels:
-        app: reddit-clone-app
+        app: reddit-clone-app:1.0.0-8
     spec:
       containers:
-        - name: reddit-clone-app
+        - name: reddit-clone-app:1.0.0-8
           image: zylmaimun/reddit-clone-pipeline:1.0.0-1
           resources:
             limits:
