--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,14 +6,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: reddit-clone-app-1.0.0-10
+      app: reddit-clone-app:1.0.0-11
   template:
     metadata:
       labels:
-        app: reddit-clone-app-1.0.0-10
+        app: reddit-clone-app:1.0.0-11
     spec:
       containers:
-        - name: reddit-clone-app-1.0.0-10
+        - name: reddit-clone-app:1.0.0-11
           image: zylmaimun/reddit-clone-pipeline-1.0.0-10
           resources:
             limits:
