--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,14 +6,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: reddit-clone-app-100-19
+      app: reddit-clone-app
   template:
     metadata:
       labels:
-        app: reddit-clone-app-100-19
+        app: reddit-clone-app
     spec:
       containers:
-        - name: reddit-clone-app-100-19
+        - name: reddit-clone-app
           image: zylmaimun/reddit-clone-pipeline-1.0.0-10
           resources:
             limits:
