--- a/service.yaml
+++ b/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: reddit-clone-service
   labels:
-    app: reddit-clone-app 
+    app: reddit-clone-app-1-24
 spec:
   selector:
-    app: reddit-clone-app
+    app: reddit-clone-app-1-24
 
   ports:
     - port: 3000
